--- a/index.html
+++ b/index.html
@@ -10,23 +10,24 @@
       rel="stylesheet"
     />
     <title>Esgined Project</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
       <div class="header">
-        <div class="heading">
-          <h1>Esgined</h1>
-        </div>
-        <div class="navigation">
-          <h3>Home</h3>
-          <h3>About</h3>
-          <h3>What we do</h3>
-          <h3>Portfolio</h3>
-          <h3>Contact us</h3>
-          <img src="user.png" />
-          <img src="search-icon.png" />
-        </div>
+          <div class="heading">
+            <h1>Esgined</h1>
+          </div>
+          <div class="navigation">
+            <h3>Home</h3>
+            <h3>About</h3>
+            <h3>What we do</h3>
+            <h3>Portfolio</h3>
+            <h3>Contact us</h3>
+            <img src="user.png" />
+            <img src="search-icon.png" />
+          </div>
       </div>
       <div class="show">
         <div class="center">
@@ -41,18 +42,258 @@
         </div>
       </div>
     </header>
-    <section class="section-1">
-    <div class="section-2">
-      <div class="tools">
-        <h1>WHAT WE DO</h1>
-        <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa alias,
-          dignissimos hic non iusto in. Rem assumenda dolorem tempore quasi
-          dolorum repellendus delectus, tempora quae voluptatem, incidunt ex
-          debitis quia?
-        </p>
+    <section class="container">
+      <div class="section-1">
+        <div class="tools">
+          <h1>WHAT WE DO</h1>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa
+            alias, dignissimos hic non iusto in. Rem assumenda dolorem tempore
+            quasi dolorum repellendus delectus, tempora quae voluptatem,
+            incidunt ex debitis quia?
+          </p>
+        </div>
+        <div class="do-container">
+          <div class="marketing">
+            <img src="d-1.png" />
+            <h3>MARKETING</h3>
+          </div>
+          <div class="development">
+            <img src="d-2.png" />
+            <h3>DEVELOPMENT</h3>
+          </div>
+          <div class="Html">
+            <img src="d-3.png" />
+            <h3>HTML5</h3>
+          </div>
+          <div class="Css">
+            <img src="d-4.png" />
+            <h3>CSS</h3>
+          </div>
+          <div class="Wordpress">
+            <img src="d-5.png" />
+            <h3>WORDPRESS</h3>
+          </div>
+        </div>
       </div>
-    </div>
+    </section>
+    <section class="container-1">
+      <div class="section-2">
+        <div class="whoimg">
+          <img src="who-img.jpg" />
+        </div>
+        <div class="whoweare">
+          <h1>WHO WE ARE?</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, neque
+            eveniet minima eaque atque debitis fugiat possimus id, iure at culpa
+            magnam repellendus, dolor inventore odio numquam veniam molestiae
+            reiciendis. Soluta est quasi veniam deleniti? Eligendi, ad
+            quibusdam. Quia facere, voluptas laudantium eaque nesciunt officiis
+            quaerat hic molestiae ipsam vitae. Et, impedit ex cum sapiente ab
+            iste dicta doloremque minus? Atque numquam aliquam excepturi quia,
+            minus ab, saepe placeat quidem dolore facere tempore pariatur eaque
+            soluta recusandae! Ipsum, fugiat ea totam id dolorem quaerat porro,
+            asperiores impedit obcaecati maxime sunt. Obcaecati deserunt
+            exercitationem dolore accusamus, officia repellat mollitia hic at
+            vero, commodi quod nihil quo. Assumenda tempora aspernatur beatae
+            consequatur nisi minus, excepturi ut laboriosam eos earum alias
+            repellat illum. Hic, quo pariatur. Animi aut voluptatum esse cum
+            quis laborum quaerat blanditiis atque optio, nobis dolorum at fugit
+            ea minima, repudiandae non nemo eum accusantium? Iure atque nobis
+            quia sint!
+          </p>
+          <button>Read More</button>
+        </div>
+      </div>
+    </section>
+    <section class="container-3">
+      <div class="section-3">
+        <h1>CREATIVE WORKS</h1>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae,
+          possimus temporibus, modi quidem voluptatum minus quos veritatis,
+          ullam animi provident voluptatibus expedita itaque eaque sapiente
+          rerum ipsam laboriosam nam laudantium
+        </p>
+        <div class="boximages">
+          <div class="box b1">
+            <img src="w-1.png" />
+          </div>
+          <div class="box b2">
+            <img src="w-2.png" />
+          </div>
+          <div class="box b3">
+            <img src="w-3.png" />
+          </div>
+          <div class="box b4">
+            <img src="w-4.png" />
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="container-4">
+      <div class="target-section">
+        <div class="target-1">
+          <h2>1000+</h2>
+          <h5>Year of Business</h5>
+        </div>
+        <div class="target-2">
+          <h2>20000+</h2>
+          <h5>Project Delivered</h5>
+        </div>
+        <div class="target-3">
+          <h2>10000+</h2>
+          <h5>Satisfied Customers</h5>
+        </div>
+        <div class="target-4">
+          <h2>1500+</h2>
+          <h5>Cups of coffee</h5>
+        </div>
+      </div>
+    </section>
+    <section class="contact_section">
+      <div class="container">
+        <div class="heading_container">
+          <h1>REQUEST A CALL BACK</h1>
+        </div>
+        <div class="row">
+          <div class="contact_form">
+            <form action>
+              <div>
+                <input placeholder="Full Name" type="text" />
+              </div>
+              <div>
+                <input placeholder="Phone Number" type="number" />
+              </div>
+              <div>
+                <input type="email" placeholder="Email Address" />
+              </div>
+              <div>
+                <input type="text" placeholder="Message" class="message" />
+              </div>
+              <div>
+                <button>SEND</button>
+              </div>
+            </form>
+          </div>
+        </div>
+        <div class="map_image">
+          <img src="map-img.png" />
+        </div>
+      </div>
+    </section>
+    <section class="info-section">
+      <div class="container">
+        <div class="row">
+          <div class="infobox">
+            <div class="info_contact">
+              <h3>About shop</h3>
+              <div>
+                <div class="img_box">
+                  <img src="location-white.png" />
+                </div>
+                <p>Address</p>
+              </div>
+              <div>
+                <div class="img_box">
+                  <img src="telephone-white.png" />
+                </div>
+                <p>+01 1234567890</p>
+              </div>
+              <div>
+                <div class="img_box">
+                  <img src="envelope-white.png" />
+                </div>
+                <p>demo@gmail.com</p>
+              </div>
+            </div>
+          </div>
+          <div class="infobox">
+            <div class="info_info">
+              <h3>Information</h3>
+              <div>
+                <p>
+                  ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                  eiusmod tempor incididunt
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="infobox">
+            <div class="info_insta">
+              <h3>Instagram</h3>
+              <div class="insta-container">
+                <div>
+                  <a href="">
+                    <div class="insta-box b-1">
+                      <img src="insta.png" alt="" />
+                    </div>
+                  </a>
+                  <a href="">
+                    <div class="insta-box b-2">
+                      <img src="insta.png" alt="" />
+                    </div>
+                  </a>
+                </div>
+                <div>
+                  <a href="">
+                    <div class="insta-box b-3">
+                      <img src="insta.png" alt="" />
+                    </div>
+                  </a>
+                  <a href="">
+                    <div class="insta-box b-4">
+                      <img src="insta.png" alt="" />
+                    </div>
+                  </a>
+                </div>
+                <div>
+                  <a href="">
+                    <div class="insta-box b-5">
+                      <img src="insta.png" alt="" />
+                    </div>
+                  </a>
+                  <a href="">
+                    <div class="insta-box b-6">
+                      <img src="insta.png" alt="" />
+                    </div>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="infobox">
+            <div class="info_form">
+              <h3>Newsletter</h3>
+              <form action>
+                <input type="email" placeholder="Enter Your email" />
+                <button>SUBSCRIBE</button>
+              </form>
+              <div class="social_box">
+                <a href>
+                  <img src="fb.png" />
+                </a>
+                <a href>
+                  <img src="twitter.png" />
+                </a>
+                <a href>
+                  <img src="linkedin.png" />
+                </a>
+                <a href>
+                  <img src="youtube.png" />
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="container-fluid footer_section">
+      <p>
+        &copy; 2020 All Rights Reserved By
+        <a href="#">Free Html Templates</a>
+      </p>
     </section>
   </body>
 </html>
